--- a/src/_includes/root.njk
+++ b/src/_includes/root.njk
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="{{ '/style/style.css' | url }}" />
     <title>{{ title }}</title>
   </head>
-  <body>
+  <body class="prose max-w-none bg-gray-50">
     {% include "header.njk" %}
-    <div class="container flex gap-x-16 py-8">
-      <div class="w-64 flex-shrink-0 pt-8 mt-4 hidden md:block">
+    <div
+      class="container grid grid-cols-1 md:grid-cols-12 grid-flow-col gap-x-16 pt-8"
+    >
+      <div class="col-span-3 hidden md:block">
         <nav class="side-menu">
           <ul>
             {% for navItem in site.pages %}
@@ -20,7 +22,7 @@
           </ul>
         </nav>
       </div>
-      <main class="flex-grow prose max-w-none">{{ content | safe }}</main>
+      <main class="col-span-9">{{ content | safe }}</main>
     </div>
 
     {% include "footer.njk" %}
