fix: 相対リンク

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -7,7 +7,7 @@
           <ul class="flex flex-wrap gap-4 text-sm justify-center">
             {% for navItem in site.pages %}
             <li>
-              <a class="whitespace-nowrap" href="{{navItem.path | url}}"
+              <a class="whitespace-nowrap" href="{{navItem.path}}"
                 >{{navItem.title}}</a
               >
             </li>
