--- a/src/_includes/results_header.njk
+++ b/src/_includes/results_header.njk
@@ -1,9 +1,9 @@
-<img class="mt-0" src="{{ cover | url }}" alt="{{ title }}" />
+<img class="mt-0" src="{{ cover}}" alt="{{ title }}" />
 
 <header class="flex gap-x-4 items-center">
   <img
     class="w-16 h-16 rounded overflow-hidden my-0"
-    src="{{ icon | url }}"
+    src="{{ icon }}"
     alt="{{ title }}"
   />
   <h1 class="my-0">{{title}}</h1>
