--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,8 +1,8 @@
 <header class="global-header">
   <div class="container h-full flex justify-between items-center gap-x-4">
     <div class="brand-logo">
-      <a href="{{ '/' | url }}" class="flex items-center gap-x-2 no-underline">
-        <img class="w-12 h-12" src="{{'/image/logo.png' | url }}" alt="" />
+      <a href="/" class="flex items-center gap-x-2 no-underline">
+        <img class="w-12 h-12" src="/image/logo.png" alt="" />
         <span class="text-sm md:text-base font-bold">{{ site.name }}</span>
       </a>
     </div>
