`width` と `height` を指定

--- a/src/_includes/results_header.njk
+++ b/src/_includes/results_header.njk
@@ -1,4 +1,10 @@
-<img class="mt-0" src="{{ cover}}" alt="{{ title }}" />
+<img
+  class="mt-0"
+  width="1200"
+  height="600"
+  src="{{ cover }}"
+  alt="{{ title }}"
+/>
 
 <header class="flex gap-x-4 items-center">
   <img
