feat: 崩れを解消

--- a/src/_includes/root.njk
+++ b/src/_includes/root.njk
@@ -23,7 +23,7 @@
           </ul>
         </nav>
       </div>
-      <main class="col-span-9">{{ content | safe }}</main>
+      <main class="md:col-span-9">{{ content | safe }}</main>
     </div>
 
     {% include "footer.njk" %}
