feat: 学期を日本語表記にするように

--- a/src/_includes/results_header.njk
+++ b/src/_includes/results_header.njk
@@ -9,7 +9,7 @@
   <h1 class="my-0">{{title}}</h1>
 </header>
 
-<p class="text-sm">{{year}}年度 {{term}}に発表されました</p>
+<p class="text-sm">{{year}}年度{% conv_term_to_ja term %}に発表されました</p>
 
 <!-- prettier-ignore -->
 <section>
