fix: 細かな文章修正

--- a/src/_includes/results_header.njk
+++ b/src/_includes/results_header.njk
@@ -13,7 +13,7 @@
 
 <!-- prettier-ignore -->
 <section>
-<h2>repositories</h2>
+<h2>Repositories</h2>
 <ul class="text-xs font-mono">
 {% for repo in repositories %}
 <li><a href="{{repo}}">{{repo}}</a></li>
