--- a/src/_includes/root.njk
+++ b/src/_includes/root.njk
@@ -7,10 +7,10 @@
     <title>{{ title }}</title>
     <meta name="description" content="{{ description or site.description }}" />
   </head>
-  <body class="prose max-w-none bg-gray-50">
+  <body class="prose max-w-none flex flex-col h-screen bg-gray-50">
     {% include "header.njk" %}
     <div
-      class="container grid grid-cols-1 md:grid-cols-12 grid-flow-col gap-x-16 pt-8"
+      class="container grid grid-cols-1 md:grid-cols-12 grid-flow-col gap-x-16 pt-8 mb-auto"
     >
       <div class="col-span-3 hidden md:block">
         <nav class="side-menu">
