chore: 成果発表を回遊しやすくした

--- a/src/_includes/results_header.njk
+++ b/src/_includes/results_header.njk
@@ -1,3 +1,8 @@
+<p class="text-xs">
+  <a href="/">トップ</a> / <a href="/results">成果発表一覧</a> /
+  <span>{{title}}</span>
+</p>
+
 <img
   class="mt-0"
   width="1200"
