--- a/src/index.njk
+++ b/src/index.njk
@@ -18,8 +18,13 @@ title: はじめに
 <article class="prose max-w-none">
   <p>
     筑波大学情報学群
-    組み込み技術キャンパスOJTの活動、及び成果発表を残すためのリポジトリ
+    組み込み技術キャンパスOJTの活動、及び成果発表を残すためのリポジトリです
   </p>
+
+  <section>
+    <h2>成果発表一覧</h2>
+    <p><a href="/results">成果発表の作品一覧</a>ができました</p>
+  </section>
 
   <section>
     <h2>おしらせ</h2>
